--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -17,7 +17,7 @@
     <string name="agenda_remove_event">Removido da agenda</string>
     <string name="agenda_add_event">Adicionado a agenda</string>
     <string name="my_agenda">Minha Agenda</string>
-    <string name="notification_title">Lembrete</string>
+    <string name="notification_title">FTSL - Lembrete</string>
     <string name="connection_down">Verifique sua conexão</string>
     <string name="day_1_title">16 de set</string>
     <string name="day_2_title">17 de set</string>
